[package]
name = "milnet-crypto"
version = "0.1.0"
edition.workspace = true

[dependencies]
milnet-common = { path = "../milnet-common" }
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
hkdf.workspace = true
hmac.workspace = true
subtle.workspace = true
zeroize.workspace = true
x25519-dalek.workspace = true
getrandom.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
