[package]
name = "milnet-kt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
milnet-common = { path = "../milnet-common" }
milnet-crypto = { path = "../milnet-crypto" }
sha3.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
