[package]
name = "milnet-opaque"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
milnet-common = { path = "../milnet-common" }
milnet-crypto = { path = "../milnet-crypto" }
milnet-shard = { path = "../milnet-shard" }
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opaque-ke.workspace = true
argon2.workspace = true

[dev-dependencies]
