[package]
name = "milnet-ratchet"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
milnet-common = { path = "../milnet-common" }
milnet-crypto = { path = "../milnet-crypto" }
milnet-shard = { path = "../milnet-shard" }
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
zeroize.workspace = true
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
