[package]
name = "offline-jwt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
sso-protocol = { path = "../sso-protocol" }
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
base64 = "0.22"
sha2.workspace = true

[features]
default = ["production"]
production = ["common/production"]
