[package]
name = "opaque"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
shard = { path = "../shard" }
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opaque-ke.workspace = true
argon2.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
rand.workspace = true
sqlx.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
ml-dsa = "0.1.0-rc.7"
hmac.workspace = true
hkdf.workspace = true
subtle.workspace = true
zeroize = { version = "1", features = ["zeroize_derive"] }
getrandom = "0.2"

[features]
default = ["production"]
production = ["common/production"]

[dev-dependencies]
opaque-ke.workspace = true
rand.workspace = true
crypto = { path = "../crypto" }
