[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
shard = { path = "../shard" }
opaque = { path = "../opaque" }
tss = { path = "../tss" }
gateway = { path = "../gateway" }
serde.workspace = true
postcard.workspace = true
uuid.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opaque-ke.workspace = true
rand.workspace = true
